Fix overflow issues

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  overflow: no-content;
+  overflow: hidden;
 }
 
 a:hover {
